--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "gh-pages": "^3.1.0",
     "html-to-docx": "^1.1.32",
     "ngx-print": "^1.2.0-beta.5",
     "rxjs": "~6.6.0",
