--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "@angular/router": "~11.0.0",
     "gh-pages": "^3.1.0",
     "html-to-docx": "^1.1.32",
+    "lodash": "^4.17.20",
+    "ngx-filter-pipe": "^2.1.2",
+    "ngx-mat-select-search": "^3.2.0",
     "ngx-print": "^1.2.0-beta.5",
+    "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
