--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gh-pages": "^3.1.0",
     "html-to-docx": "^1.1.32",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-mat-select-search": "^3.2.0",
     "ngx-print": "^1.2.0-beta.5",
